<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nttvn.dn.justlikeme.Home">
    <item
        android:id="@+id/action_20m"
        android:orderInCategory="100"
        android:title="@string/action_20m"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_50m"
        android:orderInCategory="100"
        android:title="@string/action_50m"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_100m"
        android:orderInCategory="100"
        android:title="@string/action_100m"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />
</menu>
